--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -1,12 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.EntityFrameworkCore": "Warning",
+        "System.Net.Http.HttpClient": "Warning"
+      }
     }
   },
   "ConnectionStrings": {
     "Database": "Server=localhost:5433;Database=real_it_database;Port=6432;User Id=postgres;Password=postgres; CommandTimeout=120;",
     "Cache": "localhost:6379"
+  },
+  "Jwt": {
+    "Iss": "http://localhost:7158"
   }
 }
