operations cache and endpoints response in swagger

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -5,7 +5,8 @@
       "Override": {
         "Microsoft": "Warning",
         "Microsoft.EntityFrameworkCore": "Warning",
-        "System.Net.Http.HttpClient": "Warning"
+        "System.Net.Http.HttpClient": "Warning",
+        "ZiggyCreatures.Caching.Fusion.FusionCache": "Warning"
       }
     }
   },
@@ -16,12 +17,13 @@
   },
   "ConnectionStrings": {
     "Database": "Server=postgres;Database=real_it_database;Port=5432;User Id=postgres;Password=postgres; CommandTimeout=120;",
-    "Cache": "localhost:6379"
+    "Cache": "redis:6379"
   },
   "Webhook": {
     "Url": "https://1e07a68677c6.ngrok-free.app/webhook"
   },
   "Jwt": {
-    "Key": "dc4878f5-4a30-457c-8b24-f99d4f4670c1"
+    "Key": "dc4878f5-4a30-457c-8b24-f99d4f4670c1",
+    "Iss": "http://service:8080"
   }
 }
